[workspace]
resolver = "2"
members = [
    "crates/webrecon-cli",
    "crates/webrecon-core",
    "crates/webrecon-whois",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["thedst22"]
license = "MIT"
repository = "https://github.com/thedst22/webrecon"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4.5", features = ["derive", "color", "wrap_help"] }
owo-colors = { version = "4", features = ["supports-colors"] }
indicatif = "0.17"
trust-dns-resolver = "0.23"
ipnet = "2.9"
url = "2.5"
