[package]
name = "webrecon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "webrecon"
path = "src/main.rs"

[dependencies]
webrecon-core = { path = "../webrecon-core" }
webrecon-whois = { path = "../webrecon-whois" }
webrecon-subdomains = { path = "../webrecon-subdomains" }
webrecon-portscan = { path = "../webrecon-portscan" }
webrecon-cve = { path = "../webrecon-cve" }
webrecon-ipintel = { path = "../webrecon-ipintel" }
webrecon-intel = { path = "../webrecon-intel" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
owo-colors = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
trust-dns-resolver = { workspace = true }
ipnet = { workspace = true }
futures = { workspace = true }
