[package]
name = "webrecon-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
native-tls = "0.2"
tokio-native-tls = "0.3"
x509-parser = "0.16"
webrecon-core = { path = "../webrecon-core" }
