[package]
name = "webrecon-ipintel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
webrecon-core = { path = "../webrecon-core" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
